	PR profile/20815 	* coverage.c (coverage_checksum_string): Fix code to stip random seeds 	from symbol names while computing checkup.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@106283 138bc75d-0d04-0410-961f-82ee72b054a4